# tc

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  PROJECT_PROMPT.md  PROTOCOL.md  README.md  build.sh  docker-compose.yml  install.ps1  install.sh
.github/workflows/: desktop-ci.yml  desktop-release.yml  release.yml
apps/desktop/: .gitignore  README.md  index.html  overlay.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  overlay.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  overlay.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio_cmd.rs  commands.rs  deeplink.rs  dev_log.rs  dm.rs  drain.rs  events.rs  history.rs  hotkeys.rs  level_pump.rs  lib.rs  main.rs  notify.rs  overlay.rs  server_registry.rs  settings_cmd.rs  state.rs  tray.rs  update_check.rs  voice_actor.rs
apps/desktop/src/components/: ChannelHeader.tsx  Composer.tsx  DevicePrompt.tsx  Icons.tsx  Identicon.tsx  InviteConfirm.tsx  Overlay.tsx  Palette.tsx  Pane.tsx  Peers.tsx  Popover.tsx  Settings.tsx  Sidebar.tsx  Toast.tsx  UpdateNotification.tsx  VoiceStrip.tsx  VoiceWave.tsx
apps/desktop/src/lib/: actions.ts  commands.ts  dm.ts  fp.ts  i18n.ts  identicon.ts  palette.ts  platform.ts  store.ts  tauri.ts  theme.ts  wire.ts
crates/client/: Cargo.toml
crates/client/src/: audio.rs  codec.rs  identity.rs  lib.rs  main.rs  network.rs  peer_gain.rs  settings.rs  tls.rs  tui.rs  voice.rs  web.rs  web_ui.html
crates/loadtest/: Cargo.toml
crates/loadtest/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  metrics.rs  rate_limit.rs  state.rs  tcp.rs  tls.rs  udp.rs
crates/server/tests/: connection.rs  e2e.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  invite.rs  lib.rs  protocol.rs
docs/: STACK.md  STATE.md
docs/adr/: 0001-shared-core-multiple-frontends.md  0002-relay-never-decrypts-voice.md  README.md
docs/state/: closed-cli-core.md  closed-desktop.md  decisions.md  resume-protocol.md  testing.md
