[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.6.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Audio
cpal = "0.15"
audiopus = "0.3.0-rc.0"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
chacha20poly1305 = "0.10"
rubato = "0.16"
ringbuf = "0.4"
sha2 = "0.10"
libc = "0.2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Web
axum = { version = "0.8", features = ["ws"] }

# TLS
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = "1"
rcgen = "0.13"
rustls-pemfile = "2"
