[package]
name = "tc-client"
version.workspace = true
edition.workspace = true

[dependencies]
tc-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
cpal.workspace = true
audiopus.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
toml.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
