[package]
name = "tc-client"
version.workspace = true
edition.workspace = true

[lib]
name = "tc_client"
path = "src/lib.rs"

[[bin]]
name = "tc-client"
path = "src/main.rs"

[dependencies]
tc-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
cpal.workspace = true
audiopus.workspace = true
nnnoiseless.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chacha20poly1305.workspace = true
rubato.workspace = true
ringbuf.workspace = true
rand.workspace = true
toml.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
sha2.workspace = true
clap.workspace = true
axum.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
arc-swap.workspace = true

[dev-dependencies]
tempfile = "3"
