[package]
name = "termicall-server"
version.workspace = true
edition.workspace = true

[dependencies]
termicall-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
