[package]
name = "tc-desktop"
version.workspace = true
edition.workspace = true
description = "tc_ desktop client (Tauri + Solid)"

[lib]
name = "tc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }

tc-shared = { path = "../../../crates/shared" }
tc-client = { path = "../../../crates/client" }
hex = "0.4"
cpal = { workspace = true }
sha2 = { workspace = true }
