[package]
name = "tc-desktop"
version.workspace = true
edition.workspace = true
description = "tc_ desktop client (Tauri + Solid)"

[lib]
name = "tc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
url = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }

tc-shared = { path = "../../../crates/shared" }
tc-client = { path = "../../../crates/client" }
hex = "0.4"
cpal = { workspace = true }
sha2 = { workspace = true }

# Windows autostart is handled directly via the registry: the bundled
# auto-launch 0.5 (pinned by tauri-plugin-autostart) *opens* HKCU\...\Run
# instead of creating it, failing with os error 2 on profiles where that key
# is absent. We manage the Run value ourselves and keep the plugin for mac/linux.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
